@@ -1,6 +1,6 @@
 <?xml version='1.0' encoding='utf-8'?>
 <widget id="com.phonegap.jeevesTEST" version="0.2.2" android-versionCode="6" xmlns="http://www.w3.org/ns/widgets" xmlns:gap="http://phonegap.com/ns/1.0">
-    <name>JeevesTEST</name>
+    <name>Jeeves</name>
     <description>
         Jeeves Personal Assistant demo.
     </description>
