@@ -37,32 +37,32 @@
 		<!-- Splash Screen -->
 		<div class="splash-screen" id="splashScreen">
 			<img class="splash" src="splash.png" alt="logo" height="200" width="200">
-			<div>
-				<!-- Have to manually add <br> -->
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
-				<br>
+			<div		<!-- Have to manually add <br> -->
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>>
+
 			</div>
-			<h1 class="text-center"><font color="white">Loading ... </font></h1>
+			<h1 class="text-center" id='splash-loading'><font color="white">Loading ... </font></h1>
 	</div>
 
 	<!-- The main container of the app -->
